--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "booking_app_backend",
+  "name": "pharmacy_app_backend",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
-  "author": "Team InfoX",
+  "author": "Manura",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -16,7 +16,6 @@
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.6",
-    "nodemon": "^2.0.15"
+    "mongoose": "^6.2.6"
   }
 }
